--- a/MY VIDEO.html
+++ b/MY VIDEO.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="MY VIDEO.css">
     <title>Tautan YouTube</title>
     <style>
         body {
