--- a/MY VIDEO.html
+++ b/MY VIDEO.html
@@ -18,7 +18,6 @@
 </head>
 <body>
     <div class="video-link">
-        <h1>LINK YOUTUBE</h1>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/f6vyZRe8l2w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <h1><a href="https://youtu.be/f6vyZRe8l2w">LINK YOUTUBE</a><h1>
 </body>
 </html>
