--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2 style="text-align: center;"
         class="button"> 
         <a href="my materi.html"style="color: black;"><button class="btn second">CLICK HERE</button></a>
-        <a href="my video.html" style="color: black;"><button class="btn second">VIDEO HERE</button></a>
+        <a href="http://youtu.be/f6vyZRe8l2w" style="color: black;"><button class="btn second">VIDEO HERE</button></a>
         </div>
         <header>
     </body>
